--- a/python-colab.ipynb
+++ b/python-colab.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/czwind/ClearUsb/blob/master/python-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "dzNng6vCL9eP"
       },
       "source": [
@@ -107,11 +97,11 @@
         "!python --version"
       ],
       "metadata": {
-        "id": "WVh4NT1QZPTf",
-        "outputId": "409add6c-a4e1-4a4f-d307-76cc5205d1ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WVh4NT1QZPTf",
+        "outputId": "409add6c-a4e1-4a4f-d307-76cc5205d1ba"
       },
       "execution_count": 1,
       "outputs": [
@@ -3413,8 +3403,7 @@
     "colab": {
       "name": "colab-tutorial.ipynb",
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
